test/hello-restful/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-restful
  namespace: default-mtls
  labels:
    app: hello-restful
    version: 0.3.0
    env: default-mtls
    helm.sh/chart: hello-restful-0.1.0
    app.kubernetes.io/name: hello-restful
    app.kubernetes.io/instance: hello-restful
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-restful
      app.kubernetes.io/instance: hello-restful
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-restful
        app.kubernetes.io/instance: hello-restful
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      serviceAccountName: hello-restful
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: hello-restful
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65532
            runAsGroup: 65532
            capabilities:
              drop: ["ALL"]
          image: "ghcr.io/thoughtworks-dps/hello-restful:0.3.0"
          imagePullPolicy: Always
          ports:
            - name: hello-restful
              containerPort: 8000
              protocol: TCP
          env:
            - name: API_VERSION
              value: 0.3.0
          resources:
            limits:
              cpu: 150m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /v1/hello/healthz
              port: hello-restful
            initialDelaySeconds: 3
            periodSeconds: 15
            failureThreshold: 4
          readinessProbe:
            httpGet:
              path: /v1/hello/healthz
              port: hello-restful
            initialDelaySeconds: 3
            failureThreshold: 4
            periodSeconds: 15
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/name: hello-restful
          maxSkew: 3
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
        - labelSelector:
            matchLabels:
              app.kubernetes.io/name: hello-restful
          maxSkew: 3
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      imagePullSecrets:
        - name: regcreds
