test/hello-restful/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-restful
  namespace: default-mtls
  labels:
    app: hello-restful
    version: 0.3.0
    env: default-mtls
    helm.sh/chart: hello-restful-0.1.0
    app.kubernetes.io/name: hello-restful
    app.kubernetes.io/instance: hello-restful
spec:
  type: ClusterIP
  ports:
    - name: hello-restful
      protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app.kubernetes.io/name: hello-restful
    app.kubernetes.io/instance: hello-restful
